--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-responsive": "^10.0.0",
-    "react-router-dom": "^6.22.3"
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
